--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-31  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftstring.c (Help): Added `void' type.
+
 2000-12-09  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile: Added $(LDFLAGS) variable for `unix' link target.
