--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-06  James H. Cloos Jr.  <cloos@jhcloos.com>
+
+	* src/ftview.c (Render_Text): Fix rendering of test string.
+
 2001-01-31  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftstring.c (Help): Added `void' type.
