--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-24  David Turner  <david@freetype.org>
+
+    * src/ftmemchk.c, src/memtest.c, Makefile, src/Jamfile: renamed the
+    test program "memtest" to "ftmemchk".
+
+
 	* Version 2.0.3 released.
 	=========================
 
