--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	* Version 2.0.4 released.
+	=========================
+
 2001-06-27  Werner Lemberg  <wl@gnu.org>
 
 	* src/memtest.c: s/memtest/ftmemchk/.
