--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,28 @@
+2001-08-25  Werner Lemberg  <wl@gnu.org>
+
+	Added CMap support to ftview: The new flag `-e' accepts an encoding
+	tag as defined in freetype.h (e.g. `unic') to select a character
+	map.  Only fonts with a valid character map are selected.
+
+	* src/ftcommon.i: s/num_glyphs/num_indices/.
+	(encoding): New global variable.
+	(make_tag): New function.
+	(install_font_file): If a cmap tag has been specified, load
+	functions only which have a valid cmap.
+	(my_face_requester): Select cmap also if `encoding' is non-zero.
+	(get_glyph_bitmap): Map char index to glyph if `encoding' is
+	non-zero.
+
+	* src/ftview.c: s/first_glyph/first_index/.
+	(Help): Adjust help text.
+	(usage): Document -e switch.
+	(main): Implement -e switch.
+	Adjust `Header'.
+
+
 	* Version 2.0.4 released.
 	=========================
+
 
 2001-06-27  Werner Lemberg  <wl@gnu.org>
 
@@ -18,8 +41,10 @@
 	* src/ftmemchk.c: This file.
 	* Makefile, src/Jamfile: Updated.
 
+
 	* Version 2.0.3 released.
 	=========================
+
 
 2001-05-28  David Turner  <david@freetype.org>
 
@@ -32,7 +57,7 @@
 2001-04-25  David Turner  <david@freetype.org>
 
 	* graph/beos/grbeos.cpp, graph/beos/grbeos.h, graph/beos/rules.mk,
-	graph/grinit.c: added BeOS graphics driver to MiGS
+	graph/grinit.c: added BeOS graphics driver to MiGS.
 
 2001-04-04  Werner Lemberg  <wl@gnu.org>
 
@@ -56,8 +81,10 @@
 
 2000-03-24  David Turner  <david.turner@freetype.org>
 
+
 	* Version 2.0.2 released.
 	=========================
+
 
 2001-03-23  David Turner  <david@freetype.org>
 
@@ -91,10 +118,13 @@
 
 2000-12-01  David Turner  <david.turner@freetype.org>
 
+
 	* Version 2.0.1 released.
 	=========================
 
+
 2000-11-09  David Turner  <david@freetype.org>
+
 
 	* Version 2.0 released.
 	=======================
