--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-  First compile the FreeType 2 library, then say `make'.
+  First compile the FreeType 2 library, then say `make'.  However, you
+  must rename  the directory of the FreeType 2  library to `freetype2'
+  (or create a symlink) before doing this.
 
   Note  that  the  demonstration  programs  include  a  tiny  graphics
   sub-system that includes `drivers' to display Windows on Win32, X11,
