--- a/README
+++ b/README
@@ -1,3 +1,16 @@
+WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
+
+  The Makefile and Jamfile contained in this directory assume that the
+  FreeType 2 library sources are located in ../freetype2. If you
+  downloaded one of the stable FreeType 2 source packages from our server,
+  you'll most probably need to rename its directory, for example:
+  
+    mv freetype-2.0.4 freetype2       on Unix
+    rename freetype-2.0.4 freetype2   on Windows
+
+WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
+
+
   First compile the FreeType 2 library, then say `make'.  However, you
   must rename  the directory of the FreeType 2  library to `freetype2'
   (or create a symlink) before doing this.
