--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-08  David Turner  <david@freetype.org>
+
+        * src/ftcommon.i, src/ftview.c: now use the charmap cache
+
+
 2001-12-05  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.i, src/ftview.c: s/manager/cache_manager/ to avoid
