--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,31 @@
+2001-12-15  Werner Lemberg  <wl@gnu.org>
+
+	* Makefile: Add `testnames' program.
+	* src/testnames.c (main): Remove unused variable.
+	First command line parameter is now used as the font to be tested
+	instead of a fixed string.
+
+2001-12-14  David Turner  <david@freetype.org>
+
+	* src/ftstring.c (layout_glyphs): Fix centering bug.
+
 2001-12-12  David Turner  <david@freetype.org>
 
-    * src/testnames.c: adding test program
-
+	* src/testnames.c: New test program.
 
 2001-12-08  David Turner  <david@freetype.org>
 
-    * src/ftcommon.i, src/ftview.c: now use the charmap cache
+	Use new charmap cache.
 
+	* src/ftcommon.i: Include FT_CACHE_CHARMAP_H.
+	(cmap_cache): New global variable.
+	(encoding): Change type to FT_UInt32.
+	(init_freetype): Initialize charmap cache.
+	(get_glyph_index): New function.
+	(get_glyph_bitmap): Use it.
+	Increase pixel dimensions to 48 for sbit cache.
+	Add ftc_image_format_outline flag if not a bitmap glyph.
+	* src/ftview.c: Use `get_glyph_index'.
 
 2001-12-05  Werner Lemberg  <wl@gnu.org>
 
