--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-21  David Turner  <david@freetype.org>
+
+        * src/ftcommon.i (get_glyph_bitmap): added a missing error check,
+        and have the function return an error code when necessary..
+
 2001-12-15  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile: Add `testnames' program.
