- updated README for 2.0.6 release
- improved X11 path detection rules (in graph/x11/rules.mk) to probe
  "/usr/X11R6" and "/usr/local/X11R6" automatically. This allows the
  test programs to display their results on Debian Linux systems,
  and possibly quite a few others..

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-30  David Turner  <david@freetype.org>
+
+	* README: updated release numbers to 2.0.6
+	
+	* graph/x11/rules.mk: updated X11 detection rules. /usr/X11R6 and
+	/usr/local/X11R6 are now probed automatically as a fallback. This
+	allows the test programs to work automatically on Debian Linux
+	systems (which only use "/usr/bin/X11" in the path)
+
 2001-12-21  David Turner  <david@freetype.org>
 
         * src/ftcommon.i (get_glyph_bitmap): added a missing error check,
