--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-04-01  Werner Lemberg  <wl@gnu.org>
+
+	* graph/x11/grx11.c: Use `c_class' instead of `class' if compiling
+	with C++.
+	* src/ftcommon.i (encoding): Use `FT_Encoding' type.  Update all
+	using code.
+	(done_glyph_bitmap): Use cast.
+	* src/ftview.c: Updated to changes in `ftcommon.i'.
+	(main): Use cast for `encoding'.
+
 2002-03-30  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftdump.c (Print_Type): Use `%ld' for some fields.
