--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
 
   The Makefile and Jamfile contained in this directory assume that the
-  FreeType 2 library sources are located in ../freetype2. If you
-  downloaded one of the stable FreeType 2 source packages from our server,
-  you'll most probably need to rename its directory, for example:
+  FreeType 2  library sources are  located in `../freetype2'.   If you
+  downloaded one  of the  stable FreeType 2  source packages  from our
+  server, you most probably have to rename its directory, for example:
   
     mv freetype-2.0.6 freetype2       on Unix
     rename freetype-2.0.6 freetype2   on Windows
@@ -17,14 +17,14 @@ WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
 
   Note  that  the  demonstration  programs  include  a  tiny  graphics
   sub-system that includes `drivers' to display Windows on Win32, X11,
-  and OS/2.  The build system should automatically detect which driver
-  to use based on the current platform.
+  BeOS, Mac,  and OS/2.  The build system  should automatically detect
+  which driver to use based on the current platform.
 
   UNIX USERS:
 
     When building the demos, the build system tries to detect your X11
     path  by  looking for  the  patterns  `X11/bin', `X11R6/bin',  and
-    "X11R5/bin" in your current path  (in this order).  If no X11 path
+    `X11R5/bin' in your current path  (in this order).  If no X11 path
     is found, some demo programs  will not be able to display graphics
     and  will fail.   If you  have X11  in an  unusual place,  use the
     X11_PATH make  variable.  More  than one directory,  if necessary,
