--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-12  Michael Pfeiffer  <michael.pfeiffer@utanet.at>
+
+	* graph/beos/Jamfile: New file.
+
 2002-05-12  Werner Lemberg  <wl@gnu.org>
 
 	* README: Updated.
