--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,13 @@
 	(Process_Event): Handle `g', F9, and F10 keys.
 	(main): Call init_gamma and draw_gamma_ramp.
 
+2002-06-21  David Turner  <david@freetype.org>
+
+
+	* Version 2.1.2 released.
+	=========================
+
+
 2002-06-14  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile, graph/rules.mk: s/TOP/TOP_DIR/, s/TOP2/TOP_DIR_2/.
@@ -29,6 +36,13 @@
 	* src/ftbench.c: Removing compiler warnings.
 
 	* src/ttdebug.c: Updating to latest internal changes.
+
+2002-06-09  David Turner  <david@freetype.org>
+
+
+	* Version 2.1.1 released.
+	=========================
+
 
 2002-06-07  David Turner  <david@freetype.org>
 
