--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-01  Antoine Leca  <Antoine-Freetype@Leca-Marti.org>
+
+        * graph/win32/rules.mk: adding link rules for Borland C++
+
 2002-09-25  David Turner  <david@freetype.org>
 
         * graph/win32/grwin32.c: removing compiler warnings
